--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
     <title>Ozone </title>
   </head>
 
-  <body>
+  <body style="overflow-y:visible;">
     <div id="root"></div>
     <script src="./assets/js/main.js"></script>
   </body>
